[gd_scene load_steps=4 format=3 uid="uid://usaskd1xeltq"]

[ext_resource type="Script" path="res://scenes/castle/interior.gd" id="1_0yqey"]
[ext_resource type="PackedScene" uid="uid://nlfwdafl7scm" path="res://scenes/door.tscn" id="1_if363"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvj25"]
size = Vector2(300, 50)

[node name="Interior" type="Node2D"]
script = ExtResource("1_0yqey")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 5000.0
offset_bottom = 3000.0
color = Color(0, 1, 0.183333, 1)

[node name="Door" parent="." instance=ExtResource("1_if363")]
position = Vector2(2350, 2400)

[node name="KitchenDoor" parent="." instance=ExtResource("1_if363")]
position = Vector2(200, 2400)

[node name="RoomDoor" parent="." instance=ExtResource("1_if363")]
position = Vector2(200, 900)

[node name="RoomDoor2" parent="." instance=ExtResource("1_if363")]
position = Vector2(2350, 900)

[node name="RoomDoor3" parent="." instance=ExtResource("1_if363")]
position = Vector2(4500, 900)

[node name="Floor1" type="StaticBody2D" parent="."]
position = Vector2(200, 1500)

[node name="ColorRect" type="ColorRect" parent="Floor1"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor1"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2(700, 1950)

[node name="ColorRect" type="ColorRect" parent="Floor2"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2(1200, 2400)

[node name="ColorRect" type="ColorRect" parent="Floor3"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor4" type="StaticBody2D" parent="."]
position = Vector2(1700, 1950)

[node name="ColorRect" type="ColorRect" parent="Floor4"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor4"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor5" type="StaticBody2D" parent="."]
position = Vector2(2350, 1500)

[node name="ColorRect" type="ColorRect" parent="Floor5"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor5"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor6" type="StaticBody2D" parent="."]
position = Vector2(2900, 1950)

[node name="ColorRect" type="ColorRect" parent="Floor6"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor6"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor7" type="StaticBody2D" parent="."]
position = Vector2(3450, 2400)

[node name="ColorRect" type="ColorRect" parent="Floor7"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor7"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor8" type="StaticBody2D" parent="."]
position = Vector2(4000, 1950)

[node name="ColorRect" type="ColorRect" parent="Floor8"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor8"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[node name="Floor9" type="StaticBody2D" parent="."]
position = Vector2(4500, 1500)

[node name="ColorRect" type="ColorRect" parent="Floor9"]
offset_right = 300.0
offset_bottom = 50.0
color = Color(0.54, 0.39645, 0.243, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor9"]
position = Vector2(150, 25)
shape = SubResource("RectangleShape2D_xvj25")

[connection signal="enter" from="Door" to="." method="_on_door_enter"]
[connection signal="enter" from="KitchenDoor" to="." method="_on_kitchen_door_enter"]
[connection signal="enter" from="RoomDoor" to="." method="_on_room_door_enter"]
